[package]
name = "dptree"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>", "Hirrolot <hirrolot@gmail.com>"]
edition = "2018"
description = "An asynchronous event dispatch mechanism for Rust"
repository = "https://github.com/p0lunin/dptree"
documentation = "https://docs.rs/dptree/"
readme = "README.md"
categories = ["asynchronous", "rust-patterns"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.30"
enum-as-inner = "0.3.3"
