[package]
name = "dptree"
version = "0.2.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>", "Hirrolot <hirrolot@gmail.com>"]
edition = "2018"
description = "An asynchronous event dispatch mechanism for Rust"
repository = "https://github.com/p0lunin/dptree"
documentation = "https://docs.rs/dptree/"
readme = "README.md"
categories = ["asynchronous", "rust-patterns"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
maplit = "1.0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-Znormalize-docs"]
rustc-args = ["--cfg", "dep_docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
